accessible/ipc/DocAccessibleParent.h
@@ -218,6 +218,9 @@ class DocAccessibleParent : public ProxyAccessible,
   void MaybeInitWindowEmulation();
 
   /**
+   * Note that an OuterDocAccessible can be created before the
+   * DocAccessibleParent or vice versa. Therefore, this must be conditionally
+   * called when either of these is created.
    * @param aOuterDoc The OuterDocAccessible to be returned as the parent of
    *        this document. Only GetNativeInterface() is called on this, so it
    *        may be a ProxyAccessibleWrap or similar.
